[gd_scene load_steps=5 format=3 uid="uid://dqwyrpll0eyf4"]

[ext_resource type="Texture2D" uid="uid://dipujxhgqd5xd" path="res://icon.svg" id="1_6vwlm"]
[ext_resource type="Script" path="res://Interactertesting/Interactpad/dragitem.gd" id="1_bvxoa"]
[ext_resource type="PackedScene" uid="uid://c6u7u4tdli83g" path="res://Interactertesting/Interactpad/Mark_icon.tscn" id="2_ds2os"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ck3xg"]
size = Vector2(142, 136)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_bvxoa")
mark = ExtResource("2_ds2os")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6vwlm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -1)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_ck3xg")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
